# ChatLabPro

./: CMakeLists.txt  Chat.h  ChatTest.cpp  Message.h  MessageNotify.h  Observer.h  README.md  Subject.h  User.cpp  User.h  main.cpp  runAllTests.cpp
test/: CMakeLists.txt  ChatTest.cpp  MessageTest.cpp  MssageTest.cpp  UserTest.cpp  runAllTests.cpp
